--- a/pgs_html/estilos/all.css
+++ b/pgs_html/estilos/all.css
@@ -105,10 +105,13 @@ section {
     border-radius: 0px 5px 5px 0px;
     background-color: white;
     text-align: center;
+
+    cursor: pointer;
 }
 
 #botao>img {
     width: 30px;
+    margin-top: 0px;
 }
 
 .inp {
