--- a/pgs_html/estilos/generic.css
+++ b/pgs_html/estilos/generic.css
@@ -42,6 +42,13 @@
 
         border-radius: 3px;
     }
+    #botao {
+        height: 40px;
+
+    }
+    #botao > img {
+        margin-top: 5px;
+    }
 }
 
 @media screen and (min-width: 880px) {
@@ -82,5 +89,13 @@
         text-indent: 10px;
 
         border-radius: 5px;
+    }
+    #botao {
+        height: 60px;
+        width: 60px;
+    }
+    #botao > img {
+        width: 45px;
+        margin-top: 9px;
     }
 }
